tile-layout-library/style.css
/**************************************************************
* Name: Kevin Hou
* License: MIT
*
* Description: SCSS styling for tile layout for web.
*
* Compile:
*   sass --watch style.scss:style.css
**************************************************************/
.main-grid {
  width: 100%;
  overflow: visible; }

@media only screen and (max-width: 600px) {
  .tile {
    width: 100% !important;
    height: 350px !important; } }
.tile {
  opacity: 0;
  /******   Content Styling   ******/
  /******   Container Structure   ******/
  position: relative;
  display: inline-block;
  overflow: hidden;
  cursor: pointer;
  margin-top: -4px;
  background-color: black; }
  .tile-entrance {
    animation-name: bigEntrance;
    -webkit-animation-name: bigEntrance;
    animation-fill-mode: forwards;
    -webkit-animation-fill-mode: forwards;
    animation-duration: 0.5s;
    -webkit-animation-duration: 0.5s;
    animation-timing-function: ease-out;
    -webkit-animation-timing-function: ease-out; }
  .tile-text {
    position: absolute;
    width: 90%;
    padding: 2% 5% 0 5%;
    z-index: 0;
    background: -moz-linear-gradient(top, transparent 0%, black 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, transparent 0%, black 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, transparent 0%, black 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
    /* IE6-9 */
    color: white;
    text-shadow: 1px 1px #000000;
    transition: all 0.2s;
    transition-timing-function: ease-in-out; }
    .tile-text-hover {
      bottom: 0% !important;
      padding: 2% 5% 3% 5%; }
  .tile-category {
    padding: 4px 6px 4px 6px;
    font-size: 10px;
    border-radius: 2px;
    display: inline-block;
    background-color: orange; }
  .tile-title {
    font-size: 36px; }
  .tile-subtitle {
    font-size: 24px; }
  .tile-description {
    font-size: 15px; }
  .tile-content {
    width: 100%;
    height: 100%; }
  .tile-background {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    width: 100%;
    height: 100%;
    filter: brightness(0.9);
    -webkit-filter: brightness(0.9);
    opacity: 1;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    transition: all 0.2s;
    transition-timing-function: ease-in-out; }
    .tile-background-hover {
      transform: scale(1.2, 1.2);
      opacity: 0.5; }

@keyframes bigEntrance {
  0% {
    transform: scale(0.3) rotate(6deg) translateX(-30%) translateY(30%);
    opacity: 0.2; }
  30% {
    transform: scale(1.03) rotate(-2deg) translateX(2%) translateY(-2%);
    opacity: 1; }
  45% {
    transform: scale(0.98) rotate(1deg) translateX(0%) translateY(0%);
    opacity: 1; }
  60% {
    transform: scale(1.01) rotate(-1deg) translateX(0%) translateY(0%);
    opacity: 1; }
  75% {
    transform: scale(0.99) rotate(1deg) translateX(0%) translateY(0%);
    opacity: 1; }
  90% {
    transform: scale(1.01) rotate(0deg) translateX(0%) translateY(0%);
    opacity: 1; }
  100% {
    transform: scale(1) rotate(0deg) translateX(0%) translateY(0%);
    opacity: 1; } }
@-webkit-keyframes bigEntrance {
  0% {
    -webkit-transform: scale(0.3) rotate(6deg) translateX(-30%) translateY(30%);
    opacity: 0.2; }
  30% {
    -webkit-transform: scale(1.03) rotate(-2deg) translateX(2%) translateY(-2%);
    opacity: 1; }
  45% {
    -webkit-transform: scale(0.98) rotate(1deg) translateX(0%) translateY(0%);
    opacity: 1; }
  60% {
    -webkit-transform: scale(1.01) rotate(-1deg) translateX(0%) translateY(0%);
    opacity: 1; }
  75% {
    -webkit-transform: scale(0.99) rotate(1deg) translateX(0%) translateY(0%);
    opacity: 1; }
  90% {
    -webkit-transform: scale(1.01) rotate(0deg) translateX(0%) translateY(0%);
    opacity: 1; }
  100% {
    -webkit-transform: scale(1) rotate(0deg) translateX(0%) translateY(0%);
    opacity: 1; } }

/*# sourceMappingURL=style.css.map */

